--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-keyboard-responsive-view",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A simple View to handle keyboard position for React Native",
   "main": "src/index.js",
   "scripts": {
@@ -18,6 +18,9 @@
     "responsive",
     "view"
   ],
+  "dependencies": {
+    "prop-types": "^15.6.1"
+  },
   "author": "ahanriat",
   "license": "MIT",
   "bugs": {
